2002-07-12 09:42 UTC+0100  Dave Pearson  <davep@davep.org>

	* xbase.el (xbase-indent-rules): Added customize option for
	removing all indentation from the offset rule via the extra offset
	setting.

2002-07-12 09:37 UTC+0100  Dave Pearson  <davep@davep.org>

	* xbase.el: Added the commentary and installation hints.

2002-07-02 09:56 UTC+0100  Dave Pearson  <davep@davep.org>

	* xbase.el (xbase-indent-line): (/= ...) instead of (not (eq ...)).

2002-07-02 09:52 UTC+0100  Dave Pearson  <davep@davep.org>

	* xbase.el (xbase-indent-line): Modified the code so that the
	indent level is only calculated once.

2002-07-01 04:54 UTC Mike Romberg <romberg@fsl.noaa.gov>

	* xbase.el (xbase-indent-line): Don't indent if the current line
	already is indented correctly.  This prevents unneeded buffer saves
	if a user hits C-i as a matter of habbit.

2002-06-28 12:46 UTC+0100  Dave Pearson  <davep@davep.org>

	* xbase.el (xbase-mode): Updated font-lock-defaults so that the
	#ifdef/#ifndef "argument" is displayed in the "varable" face.

2002-06-28 10:16 UTC+0100  Dave Pearson  <davep@davep.org>

	* xbase.el (xbase-find-statement-backward): Now only looks for
	rules that claim they are statements. Ignores non-statement rules.

2002-06-28 10:15 UTC+0100  Dave Pearson  <davep@davep.org>

	* xbase.el (xbase-indent-level): Added support for indentation
	fixed at a specific column.

2002-06-28 10:12 UTC+0100  Dave Pearson  <davep@davep.org>

	* xbase.el (xbase-indent-rules, xbase-rule-statement-p)
	(xbase-rule-statement-p): Added support for statement and
	non-statement oriented rules. Seperated if...endif and friends out
	from #if...#endif and friends.

2002-06-28 10:10 UTC+0100  Dave Pearson  <davep@davep.org>

	* xbase.el (xbase-mode-syntax-table): Added "#" to the "w" class.

2002-06-28 09:59 UTC+0100  Dave Pearson  <davep@davep.org>

	* xbase.el (xbase-directive-face): Now defaults to
	font-lock-builtin-face instead of the keyword face.
