@@ -1,3 +1,7 @@
+2002-07-13 12:06 UTC+0100  Dave Pearson  <davep@davep.org>
+
+	* xbase.el (xbase-add-rule): Added docstring.
+
 2002-07-12 09:42 UTC+0100  Dave Pearson  <davep@davep.org>
 
 	* xbase.el (xbase-indent-rules): Added customize option for
